--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,9 @@
             "type": "image/png"
         }
     ],
-    "theme_color": "#0099ff",
-    "background_color": "#0099ff",
+    "theme_color": "#000",
+    "background_color": "#000",
     "display": "standalone",
-    
+
     "start_url":"index.html"
 }
